Miscellaneous fixups
* Remove a tab in pom.xml
* Fix some javadoc
* Remove some newlines
* Remove some commented-out code
* Remove an accidental System.err.println left in
* Remove unnecessary boxing/unboxing